<resources>
    <string name="app_name">PaymentApplication</string>
    <string name="button_register_text">Register</string>
    <string name="button_login_text">Login</string>
    <string name="button_close_text">Close</string>
    <string name="edittext_user_name_hint_text">Input Username</string>
    <string name="edittext_password_hint_text">Input Password</string>
    <string name="edittext_first_name_hint_text">Input First Name</string>
    <string name="edittext_middle_name_hint_text">Input Middle Name</string>
    <string name="edittext_last_name_hint_text">Input Last Name</string>
    <string name="edittext_birth_date_hint_text">Input Birth Date</string>
    <string name="button_payment_text">Payment</string>
    <string name="button_login_information_text">Login Information</string>
    <string name="button_success_logins_text">Success Logins</string>
    <string name="button_fail_logins_text">Fail Logins</string>
    <string name="alert_dialog_login_info_title_text">Login Information</string>
    <string name="alert_dialog_login_info_ok_text">OK</string>
    <string name="alert_dialog_register_close_title_text">Alert</string>
    <string name="alert_dialog_register_yes_text">Yes</string>
    <string name="alert_dialog_register_no_text">No</string>
    <string name="button_clear_text">Clear</string>
    <string name="edittext_product_name_hint">Product Name</string>
    <string name="edittext_unit_price_hint">Unit Price</string>
    <string name="edittext_product_amount_hint">Amount</string>
    <string name="button_make_payment_text">Make Payment</string>
    <string name="edittext_description_hint">Description</string>
    <string name="alert_dialog_warning_title">Warning</string>
    <string name="alert_dialog_not_empty_fields_text">Please fill in the blanks!</string>
    <string name="alert_dialog_clear_title">Are you sure for clear all fields?</string>
    <string name="alert_dialog_register_close_text">Close</string>
    <string name="button_payments_text">Payments</string>
</resources>