<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="nuricanozturk.dev.android.payment.viewmodel.PaymentActivityListenerViewModel" />

        <import type="nuricanozturk.dev.android.payment.converter.DoubleConverter" />

        <variable
            name="viewModel"
            type="PaymentActivityListenerViewModel" />
    </data>


    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/paymentActivityLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".PaymentActivity">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleMakePaymentButton()}"
            android:text="@string/button_make_payment_text" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handlePaymentsButton()}"
            android:text="@string/button_payments_text" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.handleCloseButton()}"
            android:text="@string/button_close_text" />


    </LinearLayout>
</layout>